# opencv

./: .arcconfig  README-Kalray.md  compile_commands.json  format_report.el  makefile
cmake/templates/: opencv-XXX.pc.in
modules/core/include/opencv2/core/: ocl.hpp
modules/core/include/opencv2/core/opencl/: opencl_info.hpp
modules/core/src/: matrix_operations.cpp  ocl.cpp
modules/core/test/ocl/: test_opencl.cpp
modules/features2d/include/opencv2/: features2d.hpp
modules/features2d/src/: fast.cpp
modules/features2d/src/opencl/: fast_kalray.cl
modules/imgproc/perf/opencl/: perf_imgproc.cpp  perf_smooth.cpp
modules/imgproc/src/: canny.cpp  corner.cpp  filter.dispatch.cpp  morph.dispatch.cpp  smooth.dispatch.cpp
modules/imgproc/src/opencl/: canny.cl  canny_disect.cpp  canny_kalray.cl  gaussianBlur3x3_kalray.cl
modules/photo/src/: fast_nlmeans_denoising_opencl.hpp
mysamples/: CMakeLists.txt  clinfo.txt  compile_flags.txt  makefile  mandelbrote.cpp  my_example.cpp  my_example_filter.cpp  opencl_custom_kernel.cpp  transparent_api.cpp
samples-KALRAY/: CMakeLists.txt  README.md  generate_gauss_pattern.py  makefile  opencl-opencv-interop.cpp  opencl_custom_kernel.cpp  opencl_fast_kernel.cpp  transparent_api.cpp  video_demo.cpp
samples/opencl/: CMakeLists.txt  opencl-opencv-interop.cpp
samples/tapi/: opencl_custom_kernel.cpp
